# pynumpress

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yaml  test.yaml
pynumpress/: __init__.py  pynumpress.cpp  pynumpress.pyd  pynumpress.pyx
pynumpress/test/: test_numpress.py
pynumpress/test/data/: data.npz
